# FlowWizard

./: .gitignore  README.md  main.py  pyproject.toml
system/: __init__.py  node.py  pipe.py  system.py
ui/: main_menu.py  main_menu_bar.py  main_menu_buttons.py  main_ui.py  plot_ui.py  view_conexoes.py  view_nodes.py  view_pipes.py  view_trechos.py  viewer.py  viwer_grafo.py
